# ViNote

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_EN.md  README_ZH.md  cookies.txt.example  docker-compose.yml  pyproject.toml  start.bat  start.sh
backend/: __init__.py  main.py  version.py
backend/anp/: README.md  client_did_server.py  gen_did_keys.py  search_client.py  search_client_agent.py  search_server_agent.py  video_search_agent.py
backend/anp/client_did_keys/: did.json  key-1_private.pem
backend/anp/did_keys/video_search/: did.json  key-1_private.pem
backend/anp/jwt_keys/video_search/: jwt_private_key.pem  jwt_public_key.pem
backend/config/: __init__.py  ai_config.py  settings.py
backend/core/: __init__.py  ai_client.py  lifecycle.py  middleware.py  state.py
backend/db/: connection.py  schema.py
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  cards.py  dev_tools.py  downloads.py  mindmap.py  preview.py  proxy.py  qa.py  search_agent.py  storage.py  tags.py  tasks.py
backend/services/: __init__.py  audio_transcriber.py  card_generator.py  category_service.py  content_summarizer.py  note_generator.py  note_repository.py  tag_service.py  text_optimizer.py  text_translator.py  twelvelabs_service.py  video_download_service.py  video_downloader.py  video_preview_service.py  video_qa_service.py  video_search_agent.py
backend/services/search_providers/: __init__.py  anp_provider.py  base.py  local_provider.py  manager.py
backend/tests/: test_twelvelabs_service.py
backend/utils/: __init__.py  file_handler.py  text_processor.py  video_helpers.py  youtube_api_helper.py
scripts/: scan_release.py  validate_release.py
static/: index.html
static/css/: search-agent.css
static/js/: app.js
static/js/core/: VideoTranscriber.js
static/js/modules/: devTools.js  localPath.js  progress.js  qaLocalPath.js  results.js  searchAgent.js  transcription.js  ui.js  videoDownload.js  videoPreview.js
static/js/utils/: helpers.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: ChatMessage.tsx  Layout.tsx  MarkdownRenderer.tsx  MarkmapView.tsx  Modal.tsx  ProgressBar.tsx  ProgressSteps.tsx  Toast.tsx  VideoCard.tsx  progressStepData.ts  toastStore.ts
web/src/hooks/: useSSE.ts
web/src/pages/: DevTools.tsx  History.tsx  Home.tsx  KnowledgeCards.tsx  MindMap.tsx  SearchAgent.tsx  TagManagement.tsx  VideoNote.tsx  VideoQA.tsx
web/src/types/: index.ts
