[project]
name = "vinote"
version = "2.0.0"
description = "AI驱动的视频笔记生成系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "yt-dlp>=2024.12.13",
    "faster-whisper>=1.1.0",
    "openai>=1.51.0",
    "pydantic>=2.7.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["backend"]
